<resources>
    <string name="app_name">NODApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_logo">Logo App</string>
    <string name="title_splash">near of destination</string>
    <string name="description_splash">The Right Solution for Your Choice of</string>
    <string name="continue_description_splash">Travel Destination</string>
    <string name="btn_splash">MULAI</string>
    <string name="title_register">Buat Akun</string>
    <string name="hint_email">Alamat Akun Email</string>
    <string name="hint_password">Kata Sandi</string>
    <string name="daftar">Daftar</string>
    <string name="goggle_title">Lanjutkan dengan Akun Google</string>
    <string name="content_description_google">Google Logo</string>
    <string name="atau">Atau</string>
    <string name="title_login">Masuk Akun</string>
    <string name="masuk">Masuk</string>
    <string name="title_move_login">Tidak punya akun? Tekan daftar</string>
    <string name="cari">Cari</string>
    <string name="default_name_destination">Jarak Terdekat</string>
    <string name="default_sort_destination">Sort By</string>
    <string name="title_detail">Tentang Destinasi</string>
    <string name="image_destination">image destination</string>
    <string name="default_name">Nama Destinasi</string>
    <string name="default_rate">0.0</string>
    <string name="star">Star</string>
    <string name="default_count_rate">(000)</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="jenis_wisata_title">Jenis Wisata:</string>
    <string name="default_jenis">Air</string>
    <string name="provinsi">Provinsi:</string>
    <string name="kota">Kabupaten/Kota:</string>
    <string name="jarak">Jarak:</string>
    <string name="default_list_name">Nama si Pereview</string>
    <string name="default_content_rating">Test 1 2 3</string>
    <string name="square">square</string>
    <string name="default_rating">5</string>
    <string name="beri_ulasan">Beri Ulasan</string>
    <string name="pergi">Pergi</string>
    <string name="profile">Profil</string>
    <string name="profile_icon">profile icon</string>
    <string name="nama">Nama</string>
    <string name="default_username">User</string>
    <string name="email_title">Email</string>
    <string name="default_email_content">nakdnkas@yahoo.co.id</string>
    <string name="menu_title1">Jarak Terdekat</string>
    <string name="menu_title2">Jumlah Pengunjung Terbanyak</string>
    <string name="menu_title3">Kategori Destinasi</string>
    <string name="icon_square">icon square</string>
    <string name="category_title1">Wisata Air</string>
    <string name="title_category2">Wisata Taman</string>
    <string name="title_category3">Wisata Monumen</string>
    <string name="title_category4">Wisata Bukit</string>
    <string name="title_category5">Wisata Religi</string>
    <string name="icon_category">icon category</string>
    <string name="title_appbar">Hi User, Ready to Travel?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_Account">Account</string>
    <string name="dropdown_category">dropdown category</string>
    <string name="menu">menu</string>
    <string name="logo">Logo</string>
    <string name="logout">Logout</string>
    <string name="edit_name">edit name</string>
    <string name="no_items_in_wishlist">No Items in Wishlist</string>
</resources>