<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/default_list_name"
                android:textColor="#232323"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_content_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name_rating"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/default_content_rating"
                android:textColor="#232323"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_square"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_below="@id/tv_content_rating"
                android:layout_marginStart="18dp"
                android:contentDescription="@string/square"
                android:src="@drawable/baseline_crop_3_2_24"
                app:tint="#232323" />

            <TextView
                android:id="@+id/review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_content_rating"
                android:layout_marginStart="35dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/default_rating"
                android:textColor="#232323" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="16dp"
                android:layout_below="@id/tv_content_rating"
                android:layout_marginStart="40dp"
                android:layout_marginTop="19dp"
                android:contentDescription="@string/star"
                android:src="@drawable/baseline_star_rate_24" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>