<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/title_detail"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:transitionName="img"
                    android:id="@+id/iv_destination"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/image_destination"
                    android:src="@drawable/baseline_android_24" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:transitionName="name"
                android:id="@+id/tv_name_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/default_name"
                android:textColor="#232323"
                android:textAllCaps="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_image" />

            <RelativeLayout
                android:id="@+id/relative_layout_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name_destination">

                <TextView
                    android:transitionName="rating"
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/default_rate"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:transitionName="star"
                    android:id="@+id/iv_star"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_toEndOf="@id/tv_rating"
                    android:contentDescription="@string/star"
                    android:src="@drawable/baseline_star_rate_24" />

                <TextView
                    android:transitionName="total_review"
                    android:id="@+id/amount_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/iv_star"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingTop="1dp"
                    android:text="@string/default_count_rate"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_title_jenis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/jenis_wisata_title"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle=""
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/relative_layout_rating" />

            <TextView
                android:id="@+id/tv_content_jenis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/default_jenis"
                android:textColor="#000000"
                android:textSize="12sp"
                android:transitionName="jenis"
                app:layout_constraintStart_toEndOf="@id/tv_title_jenis"
                app:layout_constraintTop_toBottomOf="@id/relative_layout_rating" />



            <TextView
                android:id="@+id/tv_title_kota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/kota"
                android:textColor="#000000"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_jenis" />

            <TextView
                android:transitionName="kota"
                android:id="@+id/tv_content_kota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/default_jenis"
                android:textColor="#000000"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/tv_title_kota"
                app:layout_constraintTop_toBottomOf="@id/tv_content_jenis" />

            <TextView
                android:id="@+id/tv_title_jarak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/jarak"
                android:textColor="#000000"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_kota" />

            <TextView
                android:transitionName="distance"
                android:id="@+id/tv_content_jarak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/default_jenis"
                android:textColor="#000000"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/tv_title_jarak"
                app:layout_constraintTop_toBottomOf="@id/tv_content_kota" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ulasan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="56dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_content_jarak"
                tools:listitem="@layout/detail_rating_list_item" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_favorite"
                android:layout_width="60dp"
                android:layout_height="0dp"
                android:layout_marginTop="304dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/primary"
                android:contentDescription="@string/favorite_icon"
                android:src="@drawable/baseline_favorite_border_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:maxImageSize="45dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.FloatingActionButton"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_beri_ulasan"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/beri_ulasan"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_pergi"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/pergi"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_android_bottom"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>